fixes and slider in progress

--- a/pages/katalog.html
+++ b/pages/katalog.html
@@ -599,6 +599,10 @@
                      </p>
                      <div class="filter-block">
                         <input type="text" class="js-range-slider" name="my_range" value="" />
+                        <div class="filter-prices_inputs_wrapper">
+                           <input type="number" name="" id="">
+                           <input type="number" name="" id="">
+                        </div>
                      </div>
                  </div>
                  <div class="filter-item">
@@ -638,7 +642,7 @@
                            <p>Полусапоги</p>
                         </label>
                         <label for="Сабо">
-                           <input type="checkbox_desk" name="Сабо_desk" id="Сабо_desk">
+                           <input type="checkbox" name="Сабо_desk" id="Сабо_desk">
                            <p>Сабо</p>
                         </label>
                         <label for="Сапоги резиновые_desk">
