fixes and pop-up profile

--- a/pages/katalog.html
+++ b/pages/katalog.html
@@ -222,10 +222,18 @@
                         </div>
                      </div>
                      <div class="desktop-middle-nav">
-                        <a href="" id="profile" class="desktop-middle-nav-item">
-                        <img src="../img/icons/profile.svg" alt="">
-                        Профиль
-                        </a>
+                        <div href="" id="profile-nav-item" class="desktop-middle-nav-item">
+                           <a href="">
+                              <img src="../img/icons/profile.svg" alt="">
+                              <span>Профиль</span>
+                           </a>
+                           <div class="desktop-profile-pop-up">
+                              <a href=""><img src="../img/icons/profilePicBlue.svg" alt=""><span class="main-color-text">Личный данные</span></a>
+                              <a href=""><img src="../img/icons/heartGrey.svg" alt=""><span>Избранное</span></a>
+                              <a href=""><img src="../img/icons/cartGrey.svg" alt=""><span>Мои заказы</span></a>
+                              <a href=""><img src="../img/icons/quitRed.svg" alt=""><span class="main-color-warning">Выйти</span></a>
+                           </div>
+                        </div>
                         <!-- <div class="desktop-middle-nav_profile-block">
                            <a href="">Hello</a>
                            </div> -->
@@ -789,7 +797,7 @@
                      <div class="product-list-prices">
                         <div class="product-list-prices_item">
                            <span>Цена за пару</span>
-                           <p>60.00 ₴</p>
+                           <p class="sale">60.00 ₴</p>
                         </div>
                         <div class="product-list-prices_item">
                            <span>Цена за ящик</span>
