--- a/pages/home-page.html
+++ b/pages/home-page.html
@@ -221,10 +221,18 @@
                         </div>
                      </div>
                      <div class="desktop-middle-nav">
-                        <a href="" id="profile" class="desktop-middle-nav-item">
-                        <img src="../img/icons/profile.svg" alt="">
-                        Профиль
-                        </a>
+                        <div href="" id="profile-nav-item" class="desktop-middle-nav-item">
+                           <a href="">
+                              <img src="../img/icons/profile.svg" alt="">
+                              <span>Профиль</span>
+                           </a>
+                           <div class="desktop-profile-pop-up">
+                              <a href=""><img src="../img/icons/profilePicBlue.svg" alt=""><span class="main-color-text">Личный данные</span></a>
+                              <a href=""><img src="../img/icons/heartGrey.svg" alt=""><span>Избранное</span></a>
+                              <a href=""><img src="../img/icons/cartGrey.svg" alt=""><span>Мои заказы</span></a>
+                              <a href=""><img src="../img/icons/quitRed.svg" alt=""><span class="main-color-warning">Выйти</span></a>
+                           </div>
+                        </div>
                         <!-- <div class="desktop-middle-nav_profile-block">
                            <a href="">Hello</a>
                            </div> -->
@@ -677,37 +685,42 @@
                   </div>
                </div>
                <a href="" class="main-new_link">Посмотреть все Акции</a>
-               <div class="main-pluses">
-                   <div class="main-pluses_item">
-                       <img class="main-pluses_icon" src="../img/icons/delivery-truck.svg">
-                       <div class="main-pluses-line main-pluses-line_1"></div>
-                       <div class="main-pluses-title"><span class="main-pluses_title_1">Бессплатная</span><span>Доставка</span><p>При заказе от 20 ящиков</p></div>
-                   </div>
-                   <div class="main-pluses_item">
-                        <img class="main-pluses_icon" src="../img/icons/wallet.svg">
-                        <div class="main-pluses-line main-pluses-line_2"></div>
-                        <div class="main-pluses-title"><span class="main-pluses_title_2">Гарантия</span><span>Возврата</span><p>Возврат в течение 14 дней</p></div>
-                   </div>
-                   <div class="main-pluses_item">
-                        <img class="main-pluses_icon" src="../img/icons/open-24-hours.svg">
-                        <div class="main-pluses-line main-pluses-line_3"></div>
-                        <div class="main-pluses-title"><span class="main-pluses_title_3">Информация</span><span>О товаре</span><p>Онлайн поддержка клиентов 24/7</p></div>
-                   </div>
-               </div>
-               <div class="main-navigation">
-                   <nav>
-                       <ul>
-                           <li><a href="">Распродажа</a></li>
-                           <li><a href="">Новинки</a></li>
-                           <li><a href="">Женская</a></li>
-                           <li><a href="">Мужская</a></li>
-                           <li><a href="">Детская</a></li>
-                           <li><a href="">Украинская обувь</a></li>
-                           <li><a href="">Бренды</a></li>
-                       </ul>
-                   </nav>
-               </div>
             </div>
+            <div class="main-block-wrapper">
+               <div class="main-pluses">
+                  <div class="main-pluses_item">
+                      <img class="main-pluses_icon" src="../img/icons/delivery-truck.svg">
+                      <div class="main-pluses-line main-pluses-line_1"></div>
+                      <div class="main-pluses-title"><span class="main-pluses_title_1">Бессплатная</span><span>Доставка</span><p>При заказе от 20 ящиков</p></div>
+                  </div>
+                  <div class="main-pluses_item">
+                       <img class="main-pluses_icon" src="../img/icons/wallet.svg">
+                       <div class="main-pluses-line main-pluses-line_2"></div>
+                       <div class="main-pluses-title"><span class="main-pluses_title_2">Гарантия</span><span>Возврата</span><p>Возврат в течение 14 дней</p></div>
+                  </div>
+                  <div class="main-pluses_item">
+                       <img class="main-pluses_icon" src="../img/icons/open-24-hours.svg">
+                       <div class="main-pluses-line main-pluses-line_3"></div>
+                       <div class="main-pluses-title"><span class="main-pluses_title_3">Информация</span><span>О товаре</span><p>Онлайн поддержка клиентов 24/7</p></div>
+                  </div>
+              </div>
+            </div>
+            <div class="main-block-wrapper">
+               <div class="main-navigation">
+                  <nav>
+                      <ul>
+                          <li><a href="">Распродажа</a></li>
+                          <li><a href="">Новинки</a></li>
+                          <li><a href="">Женская</a></li>
+                          <li><a href="">Мужская</a></li>
+                          <li><a href="">Детская</a></li>
+                          <li><a href="">Украинская обувь</a></li>
+                          <li><a href="">Бренды</a></li>
+                      </ul>
+                  </nav>
+              </div>
+            </div>
+
             <div class="main-description">
                 <h2 class="main-description_title">Качественная обувь оптом </h2>
                 <p>
