range slider ready

--- a/pages/home-page.html
+++ b/pages/home-page.html
@@ -241,11 +241,14 @@
                            <div class="desktop-middle-nav-item_pop-num">2</div>
                            <p>Избранное</p>
                         </a>
-                        <a href="" class="desktop-middle-nav-item">
-                           <img src="../img/icons/cartIcon.svg" alt="">
-                           <div class="desktop-middle-nav-item_pop-num">2</div>
-                           <p>Корзина</p>
-                        </a>
+                        <div href="" id="profile-nav-item" class="desktop-middle-nav-item" href="" class="desktop-middle-nav-item">
+                           <a href="">
+                              <img src="../img/icons/cartIcon.svg" alt="">
+                              <div class="desktop-middle-nav-item_pop-num">2</div>
+                              <p>Корзина</p>
+                           </a>
+                           
+                        </div>
                      </div>
                   </div>
                </div>
