--- a/pages/katalog.html
+++ b/pages/katalog.html
@@ -417,7 +417,12 @@
                           </svg>                                
                      </p>
                      <div class="filter-block">
-                        
+                        <input type="text" class="js-range-slider" name="my_range" value="" />
+                        <div class="filter-prices_inputs_wrapper">
+                           <input class="filter-prices_input" type="number" name="min-price_input" id="min-price_input" value="50">
+                           <span class="filter-prices_input_line"></span>
+                           <input class="filter-prices_input" type="number" name="min-price_input" id="max-price_input" value="5000">
+                        </div>
                      </div>
                  </div>
                  <div class="filter-item">
@@ -608,8 +613,9 @@
                      <div class="filter-block">
                         <input type="text" class="js-range-slider" name="my_range" value="" />
                         <div class="filter-prices_inputs_wrapper">
-                           <input type="number" name="" id="">
-                           <input type="number" name="" id="">
+                           <input class="filter-prices_input" type="number" name="min-price_input" id="min-price_input" value="50">
+                           <span class="filter-prices_input_line"></span>
+                           <input class="filter-prices_input" type="number" name="min-price_input" id="max-price_input" value="5000">
                         </div>
                      </div>
                  </div>
